--- a/angular.json
+++ b/angular.json
@@ -38,9 +38,7 @@
             ],
             "styles": [
               "src/styles.scss",
-							"node_modules/primeng/resources/primeng.min.css",
-							"node_modules/primeicons/primeicons.css",
-							"src/styles.scss"
+              "@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           },
@@ -100,6 +98,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
