--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
             ],
             "styles": [
               "src/styles.scss",
-              "@angular/material/prebuilt-themes/indigo-pink.css"
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/primeng/resources/primeng.min.css",
+							"node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
