--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "echarts": "^5.6.0",
     "leaflet": "^1.9.4",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
